--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,73 @@
   box-sizing: border-box;
 }
 .container {
-  max-width: 1200px;
+  width: 1200px;
   margin: 0 auto;
+}
+.roulette {
+  margin: 0 auto;
+  width: 500px;
+  height: 250px;
+  overflow: hidden;
+  margin-top: 50px;
+}
+.items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  transform: translateX(-200px);
+}
+.items_active {
+  transform: translateX(-4700px);
+  transition: all, 4s;
+}
+.cat {
+  min-width: 300px;
+  height: 200px;
+  padding: 0 20px;
+}
+body {
+  background: url(https://html5book.ru/wp-content/uploads/2015/07/background39.png);
+}
+.btn {
+  text-decoration: none;
+  outline: none;
+  display: inline-block;
+  width: 140px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 45px;
+  margin: 10px 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 3px;
+  font-weight: 600;
+  color: #524f4e;
+  background: white;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  transition: 0.3s;
+  border: none;
+  margin: 0 auto;
+  display: block;
+}
+.btn:hover {
+  background: #2ee59d;
+  box-shadow: 0 15px 20px rgba(46, 229, 157, 0.4);
+  color: white;
+  transform: translateY(-7px);
+}
+.prise {
+  font-family: 'Montserrat', sans-serif;
+  color: #2ee59d;
+  animation: Emergence 3s;
+}
+@keyframes Emergence {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
