--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,9 +11,10 @@ body {
 .roulette {
   margin: 0 auto;
   width: 500px;
-  height: 250px;
   overflow: hidden;
   margin-top: 50px;
+  border: 2px dotted gold;
+  padding: 5px 0;
 }
 .items {
   display: flex;
@@ -22,13 +23,26 @@ body {
   transform: translateX(-200px);
 }
 .items_active {
-  transform: translateX(-4700px);
   transition: all, 4s;
+  animation: spin 4s;
 }
-.cat {
+@keyframes spin {
+  90% {
+    transform: translateX(-4710px);
+  }
+  100% {
+    transform: translateX(-4700px);
+  }
+}
+.items .item {
   min-width: 300px;
   height: 200px;
   padding: 0 20px;
+}
+.item {
+  /* min-width: 300px;
+  height: 200px;
+  padding: 0 20px; */
 }
 
 .btn {
@@ -60,6 +74,13 @@ body {
   color: white;
   transform: translateY(-7px);
 }
+.btn_disabled,
+.btn_disabled.btn:hover {
+  background-color: #524f4e;
+  color: #858585;
+  transform: translateY(0px);
+  box-shadow: 0 0 0 0;
+}
 .prise {
   font-family: 'Montserrat', sans-serif;
   color: #2ee59d;
@@ -72,4 +93,61 @@ body {
   100% {
     opacity: 1;
   }
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  transition: all 2s;
+}
+.modal {
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  position: absolute;
+  border-radius: 15px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url(https://html5book.ru/wp-content/uploads/2015/07/background39.png);
+  z-index: 0;
+  padding-bottom: 10px;
+  animation: Emergence 2s;
+}
+.modal__btn {
+  margin-top: 10px;
+}
+.modal__title {
+  width: 100%;
+  background-color: #2ee59d;
+  display: block;
+  border-radius: 15px 15px 0 0;
+  padding: 5px;
+  color: white;
+}
+.modal__components {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.modal .item {
+  max-width: 200px;
+}
+.modal .modal__component .item {
+  max-width: 100px;
+}
+.modal__info {
+  margin-top: 10px;
+}
+.roulette__buttons {
+  display: flex;
+  width: 300px;
+  margin: 0 auto;
+  margin-top: 10px;
 }
