--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,22 +5,27 @@ body {
   background: url(https://html5book.ru/wp-content/uploads/2015/07/background39.png);
 }
 .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 .roulette {
+  position: relative;
+}
+.roulette__window {
   margin: 0 auto;
   width: 500px;
-  overflow: hidden;
+  overflow-x: hidden;
   margin-top: 50px;
   border: 2px dotted gold;
   padding: 5px 0;
+  position: relative;
 }
 .items {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   transform: translateX(-200px);
+  height: 200px;
 }
 .items_active {
   transition: all, 4s;
@@ -36,7 +41,7 @@ body {
 }
 .items .item {
   min-width: 300px;
-  height: 200px;
+  height: inherit;
   padding: 0 20px;
 }
 
@@ -160,8 +165,36 @@ body {
   position: absolute;
   width: 30px;
   height: 30px;
-  top: 35px;
+  top: -15px;
   z-index: 1;
   left: 50%;
   transform: translateX(-50%);
+}
+.turn-screen {
+  display: none;
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  text-align: center;
+  z-index: 5;
+}
+.turn-screen__text {
+  font-size: 50px;
+  font-family: 'Montserrat', sans-serif;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: Emergence 3s;
+}
+@media (max-width: 500px) {
+  .turn-screen {
+    display: block;
+  }
 }
